--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+# macOS
+.DS_Store
+
 #
 # Misc.
 #
